# advanced-automats

./: .gitmodules  CMakeLists.txt  LICENSE
app/: Application.h  ApplicationControls.h  ApplicationModel.h  CameraModel.h  ControlPanelView.h  ExtendedWolframSettingsView.h  ProgramConfig.h  SettingsPanelView.h  SimulationBuffer.h  SimulationView.h  Timer.h  main.cpp
app/Application/: Application.h  ApplicationControls.h  ApplicationModel.h
app/Camera/: CameraControls.h  CameraModel.h
app/ExtendedTotalistic/: ExtendedTotalistic.ixx  ExtendedTotalisticSimulaitonView.h  ExtendedTotalisticSimulation.h  ExtendedTotalisticSimulationBuffer.h
app/ExtendedWolfram/: ExtendedWolframSimulation.h  ExtendedWolframSimulationBuffer.h  ExtendedWolframSimulationView.h
app/ServiceSystem/: IPointerDownHandler.h  IPointerUpHandler.h  ITickable.h
app/Settings/: SettingsContentView.h  SettingsPanelView.h
app/Simulation/: SimulationBuffer.h  SimulationConfig.h  SimulationView.h
app/SimulationFlow/: SimulationFlowConfig.h  SimulationFlowPanelView.h
app/Simulations/ExtendedWolfram/: ExtendedWolfram.ixx  ExtendedWolframSettingsView.h  ExtendedWolframSimulation.h  ExtendedWolframSimulationBuffer.h  ExtendedWolframSimulationConfig.h  ExtendedWolframSimulationView.h
docs/: ReadMe.md
